Fix assert failure when using Ctrl+Mousewheel on Object Mode button

Do a proper check to see if the button supports Ctrl+Mousewheel cycling.

See T80659.